--- a/notebooks/geosciences/remote_sensing/Image_Filtering.ipynb
+++ b/notebooks/geosciences/remote_sensing/Image_Filtering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Filtering\n",
+    "# Image filtering\n",
     "Filtering is a technique for modifying or enhancing an image. For example, we can use it to highlight features and/or remove noise. The basic image filtering operations implemented here are:\n",
     "- smoothing filter (moving average filter)\n",
     "- sharpening filter\n",
@@ -29,14 +29,18 @@
     "\n",
     "To prevent against empty values at the edges of the image we can use padding, for instance we can place zero values in these cells or mirror the available values within our window. If this is not done and we ignore the edge pixels we will reduce the size of our image.\n",
     "\n",
-    "## Moving Average Filter\n",
+    "## Moving average filter\n",
     "It takes M samples of input at a time and takes the average of that subset of data to produce a single output point, in statistics commonly named moving/rolling mean. As it is averaging the neighbouring pixels we are reducing the contrast between pixels and hence smoothening the image. An example of this is demonstrated below. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Import required libaries\n",
@@ -67,14 +71,14 @@
     "# Read in image\n",
     "img = imageio.imread('Data_Image_Filtering/output-onlinejpgtools.jpg')\n",
     "\n",
-    "#find image dimensions\n",
+    "# find image dimensions\n",
     "print('Image dimension =', img.shape) \n",
     "\n",
-    "#Take weighted average of 3 layers to make 1 layer gray scale\n",
+    "# Take weighted average of 3 layers to make 1 layer gray scale\n",
     "image = np.uint8((0.2126 * img[:,:,0]) + np.uint8(0.7152 * img[:,:,1]) + np.uint8(0.0722 * img[:,:,2]))\n",
     "print('Image dimension =', image.shape) \n",
-    "#To maintain orignal RGB properties apply filter to each \n",
-    "#layer individually instead of averaging them"
+    "# To maintain orignal RGB properties apply filter to each \n",
+    "# layer individually instead of averaging them"
    ]
   },
   {
@@ -100,7 +104,7 @@
     }
    ],
    "source": [
-    "#Display the result, function used throughout\n",
+    "# Display the result, function used throughout\n",
     "plt.title('input image')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
     "plt.imshow(image, cmap='gray')\n",
@@ -118,7 +122,7 @@
     "                    [1,1,1],\n",
     "                    [1,1,1]])\n",
     "\n",
-    "#Convolve the image with h\n",
+    "# Convolve the image with h\n",
     "image_filtered=scipy.signal.convolve2d(image,h,mode='full', \n",
     "                                  boundary = 'fill', fillvalue=0)"
    ]
@@ -182,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sharpening Filters\n",
+    "## Sharpening filters\n",
     "\n",
     "These filters work in the same fashion except that their kernel aims to increase the contrast between neighbouring pixels. This effect will be most pronounced at the pixels with the largest difference in digital numbers. \n",
     "\n",
@@ -216,7 +220,7 @@
     }
    ],
    "source": [
-    "#Display the change\n",
+    "# Display the change\n",
     "fig = plt.figure()\n",
     "\n",
     "fig.add_subplot(121), plt.title('input'), plt.set_cmap('gray')\n",
@@ -240,7 +244,7 @@
     "h=np.array([[-1/9,-1/9,-1/9],\n",
     "            [-1/9,1.9,-1/9],\n",
     "            [-1/9,-1/9,-1/9]])\n",
-    "#Convolve the image with h\n",
+    "# Convolve the image with h\n",
     "image_sharp=scipy.signal.convolve2d(image,h,mode='full', \n",
     "                                boundary = 'fill', fillvalue=0)"
    ]
@@ -268,7 +272,7 @@
     }
    ],
    "source": [
-    "#Display the change\n",
+    "# Display the change\n",
     "fig = plt.figure()\n",
     "\n",
     "fig.add_subplot(121), plt.title('input'), plt.set_cmap('gray')\n",
@@ -299,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Edge Detection (gradient operators)\n",
+    "## Edge detection (gradient operators)\n",
     "\n",
     "Edges in this context refer to a stark contrast in brightness (DN value) within our image. These can be related to discontinuities in depth, discontinuities in surface orientation (angle), changes in material properties and or variation in scene illumination. These methods are valuable for data extraction in areas such as image processing, computer vision, and machine learning as it allows the extraction of structural properties of an image while reducing the amount of data.\n",
     "\n",
@@ -324,10 +328,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Design the Sobel filters\n",
+    "# Design the Sobel filters\n",
     "h_sobel_x = [[1,0,-1], \n",
     "             [2,0,-2],\n",
-    "             [1,0,-1]] #this will be be used to convolve in the x-axis\n",
+    "             [1,0,-1]] # this will be be used to convolve in the x-axis\n",
     "\n",
     "h_sobel_y = [[1,2,1],\n",
     "             [0,0,0],\n",
@@ -363,7 +367,7 @@
     }
    ],
    "source": [
-    "#Display results\n",
+    "# Display results\n",
     "fig, ax = plt.subplots(1,2,figsize=(12,14)) \n",
     "ax[0].imshow(image_filtered_x, cmap='gray')\n",
     "ax[0].set_ylabel(\"pixels\")\n",
@@ -383,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Take the magnitude gradient of the two images to join them\n",
+    "# Take the magnitude gradient of the two images to join them\n",
     "mag = np.sqrt(np.square(image_filtered_x) + np.square(image_filtered_y))"
    ]
   },
@@ -410,7 +414,7 @@
     }
    ],
    "source": [
-    "#Display the result\n",
+    "# Display the result\n",
     "plt.title('magnitude')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
     "plt.imshow(mag, cmap='gray')\n",
@@ -423,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#extract information on the direction of the gradient\n",
+    "# Extract information on the direction of the gradient\n",
     "directionality = np.arctan2(image_filtered_y,image_filtered_x)"
    ]
   },
@@ -450,7 +454,7 @@
     }
    ],
    "source": [
-    "#Display the result\n",
+    "# Display the result\n",
     "plt.title('directionality of gradient/edge')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
     "plt.imshow(directionality, cmap='gist_rainbow')\n",
@@ -472,18 +476,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References and Further Reading:\n",
+    "## References and further reading\n",
     "- For further reading image filtering and alternative kernels please see: <br /> ->En.wikipedia.org. 2020. Kernel (Image Processing). [online] Available at: <https://en.wikipedia.org/wiki/Kernel_(image_processing)> [Accessed 13 July 2020]. <br /> ->Uk.mathworks.com. 2020. What Is Image Filtering In The Spatial Domain?- MATLAB & Simulink- Mathworks United Kingdom. [online] Available at: <https://uk.mathworks.com/help/images/what-is-image-filtering-in-the-spatial-domain.html> [Accessed 13 July 2020].\n",
     "- Alternatively here you can find python functions that have the kernel integrated as functions:<br /> ->Opencv-python-tutroals.readthedocs.io. 2020. Smoothing Images — Opencv-Python Tutorials 1 Documentation. [online] Available at: <https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html> [Accessed 13 July 2020].\n",
     "- Edge detection and more advanced methods:<br /> ->En.wikipedia.org. 2020. Edge Detection. [online] Available at: <https://en.wikipedia.org/wiki/Edge_detection> [Accessed 13 July 2020]."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -503,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
