--- a/notebooks/geosciences/remote_sensing/Image_Point_Operations.ipynb
+++ b/notebooks/geosciences/remote_sensing/Image_Point_Operations.ipynb
@@ -6,9 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "# Remote Sensing: Image Point Operations\n",
+    "# Image point operations\n",
     "\n",
-    "## Image Display\n",
+    "## Image display\n",
     "\n",
     "A digital image is a 2D array of numbers in lines and columns or a raster dataset. It can also have a third dimension, in the form of other layers. Each cell of a digital image is called a pixel and the number representing the brightness of the pixel is called a **digital number (DN).** It can be composed of any number of layers/bands.\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "Not all bands are within the visible spectrum, however we can visualise them by assigning them to a colour gun in the visible spectrum. Following **tristimulus colour theory**, human colour perception is performed by three types of cones matching three primary colour: **R**ed, **G**reen and **B**lue (RGB). the combination of these three colours:\n",
     "\n",
-    "$$C=rR+gG+bB$$\n",
+    "$$C=rR+gG+bB.$$\n",
     "\n",
     "Allows any colour to be represented within the visible spectrum.\n",
     "\n",
@@ -69,13 +69,13 @@
     }
    ],
    "source": [
-    "#read in image\n",
+    "# read in image\n",
     "img = imageio.imread('Data_Image_Operations/Picture1.png')\n",
     "\n",
-    "#find out image ratio\n",
+    "# find out image ratio\n",
     "print('Image dimension =', img.shape) \n",
     "\n",
-    "#separate layers\n",
+    "# separate layers\n",
     "image0 = np.uint8(img[:,:,0])\n",
     "image1 = np.uint8(img[:,:,1])\n",
     "image2 = np.uint8(img[:,:,2]) "
@@ -106,17 +106,17 @@
    "source": [
     "fig = plt.figure()\n",
     "\n",
-    "#plot grey scale\n",
+    "# plot grey scale\n",
     "fig.add_subplot(131), plt.title('grey scale')\n",
     "plt.imshow(image0, cmap = 'gray'), plt.gcf().set_size_inches(11, 14)\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
     "\n",
-    "#plot pseudo colour display\n",
+    "# plot pseudo colour display\n",
     "fig.add_subplot(132), plt.title('pseudo-colour')\n",
     "plt.imshow(image0, cmap = 'gist_rainbow'),\n",
     "plt.gcf().set_size_inches(11, 14), plt.xlabel(\"pixels\")\n",
     "\n",
-    "#generate colourbar to highlight brightest DNs (see reference 1)\n",
+    "# generate colourbar to highlight brightest DNs (see reference 1)\n",
     "threshold = 0.8 \n",
     "colors = [(0, \"white\"),\n",
     "    (threshold*float(np.max(image0))/float(np.max(image0)), \"gray\"),\n",
@@ -125,7 +125,7 @@
     "mycmap = mcolors.LinearSegmentedColormap.from_list('my_colormap', \n",
     "                                                   colors)\n",
     "\n",
-    "#generate plot using new colourbar\n",
+    "# generate plot using new colourbar\n",
     "fig.add_subplot(133), plt.title('pseudo-colour'),\n",
     "plt.imshow(image0,cmap=mycmap), plt.gcf().set_size_inches(11, 14)\n",
     "plt.xlabel(\"pixels\")\n",
@@ -136,10 +136,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Point Operations\n",
+    "## Point operations\n",
     "A point operation is a modification of a pixel value which is based on that pixel value and is independent of location or neighboring values. If we let x represent a digital image and $x_{i,j}$ is the DN of any pixel and Y the output pixel of any image then we describe any point operations as:\n",
     "\n",
-    "$$y_{i,j}=f(x_{i,j})$$\n",
+    "$$y_{i,j}=f(x_{i,j}).$$\n",
     "\n",
     "This is also frequently called histogram modification as it only alters the histogram of an image but not spatial relationship of image pixels.  Since our result is irrespective of its spatial location we will always have the same output for a specific input. This allows a **LookUp Table (LUT)** to be used. All values are computed first for every present DN level and the inputs are simply matched to their corresponding output. This saves computational time by not repeating the same operation. LUT tables scale much better."
    ]
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create histograms for all 3 bands\n",
+    "# Create histograms for all 3 bands\n",
     "\n",
     "histogram0, bin_edges0 = np.histogram(image0, bins=100, range=(0, \n",
     "                                                np.max(image0)))\n",
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cut-Off Clipping\n",
+    "### Cut-off clipping\n",
     "\n",
     "In digital images a few pixels (often noise) can occupy wide value ranges at the low and high ends of the histograms, in the example above this can be seen at the high end. In this case we can cut-off these pixels to later make better use of the dynamic range of our display (commonly 8-bit)."
    ]
@@ -214,10 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set cut-off limits\n",
+    "# set cut-off limits\n",
     "image1_clip = np.clip(image1, 20, 200)\n",
-    "#can always clip top and bottom 1% of pixels in histogram as a standard\n",
-    "#range"
+    "# can always clip top and bottom 1% of pixels in histogram as a standard\n",
+    "# range"
    ]
   },
   {
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "#visualise change\n",
+    "# visualise change\n",
     "fig = plt.figure()\n",
     "\n",
     "fig.add_subplot(221), plt.title('original'), \n",
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Contrast Enhancement\n",
+    "### Contrast enhancement\n",
     "Contrast Enhamcenet is the most basic but most effective and efficient technique to optimise the image contrast and brightness for visualisation or to highlight information in particular DN ranges.\n",
     "\n",
     "**Linear Contrast Enhancement (LCE)** is the simplest and one of the most effective contrast enhancement techniques. In this function, **a** controls the contrast of the output image, and **b** modifies the overall brightness. \n",
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Linear Scale"
+    "#### Linear scale"
    ]
   },
   {
@@ -296,18 +296,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save time by by only computing values once\n",
+    "# save time by by only computing values once\n",
     "MIN = np.min(image1_clip)\n",
     "MAX = np.max(image1_clip)\n",
     "\n",
-    "#apply linear scale\n",
+    "# apply linear scale\n",
     "LCE = (image1_clip-MIN)*(255/(MAX-MIN))\n",
     "\n",
-    "#Could be done using a lookup table, unhash \"##\" to use\n",
-    "##LUT  = {}\n",
-    "##for i in range(MIN,MAX+1): LUT[i] = (i-MIN)*(255/(MAX-MIN))   \n",
-    "##LCE = np.array([LUT.get(i) for i in range(MIN, MAX + 1)])\n",
-    "##LCE = indexer[(image1_clip - MIN)]"
+    "# Could be done using a lookup table, unhash \"##\" to use\n",
+    "# LUT  = {}\n",
+    "# for i in range(MIN,MAX+1): LUT[i] = (i-MIN)*(255/(MAX-MIN))   \n",
+    "# LCE = np.array([LUT.get(i) for i in range(MIN, MAX + 1)])\n",
+    "# LCE = indexer[(image1_clip - MIN)]"
    ]
   },
   {
@@ -340,7 +340,7 @@
     }
    ],
    "source": [
-    "#compare results\n",
+    "# compare results\n",
     "fig = plt.figure()\n",
     "\n",
     "fig.add_subplot(221), plt.title('clipped'), plt.xlim(0,250)\n",
@@ -369,9 +369,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Piecewise Linear Stretch\n",
+    "#### Piecewise linear stretch\n",
     "\n",
-    "A siple 2 bit Piecewise Linaer Stretch (PLS) is demonstrated below"
+    "A simple 2 bit Piecewise Linaer Stretch (PLS) is demonstrated below"
    ]
   },
   {
@@ -380,12 +380,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#copy array and make sure values are int\n",
+    "# copy array and make sure values are int\n",
     "PLS = LCE.copy().astype(int)\n",
     "MIN = int(np.min(PLS))\n",
     "MAX = int(np.max(PLS))\n",
     "\n",
-    "#create dictionary / LUT\n",
+    "# create dictionary / LUT\n",
     "d  = {}\n",
     "for i in range(MIN,MAX+1):  \n",
     "    if 100<i<150:\n",
@@ -393,7 +393,7 @@
     "    else:\n",
     "        d[i]=1\n",
     "\n",
-    "#apply dictionary/LUT to image \n",
+    "# apply dictionary/LUT to image \n",
     "PLS_ = PLS.flatten()\n",
     "out = np.array([d.get(i) for i in PLS_])\n",
     "out = out.reshape(PLS.shape[0],PLS.shape[1])"
@@ -422,7 +422,7 @@
     }
    ],
    "source": [
-    "#visualise result\n",
+    "# visualise result\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(221), plt.title('PLS'), plt.set_cmap('gray')\n",
     "plt.imshow(out), plt.gcf().set_size_inches(16, 22)\n",
@@ -436,14 +436,14 @@
    "source": [
     "We have removed the peak in the blue spectral layer which is dominantly water in our image. Within this part of the spectrum it is difficult to remove water only. Higher frequency bands like NIR or SWIR make it much easier to isolate water from our image as it has a clear separation from the rest of the objects in those bands. This is a great application when trying to use the optimal DN range on land or to identify coastlines.\n",
     "\n",
-    "Further reading on implementing piecewise functions: [link](http://yetanothermathprogrammingconsultant.blogspot.com/2019/02/piecewise-linear-functions-and.html)"
+    "[Further reading on implementing piecewise functions.](http://yetanothermathprogrammingconsultant.blogspot.com/2019/02/piecewise-linear-functions-and.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Balance Contrast Enhancement Technique (BCET)$^2$"
+    "### Balance contrast enhancement technique (BCET)$^2$"
    ]
   },
   {
@@ -463,27 +463,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define BCET function\n",
+    "# define BCET function\n",
     "def BCET (img):\n",
     "    l= np.min(img)\n",
     "    h= np.max(img)\n",
     "    e= np.mean(img)\n",
     "    L = 0\n",
-    "    H = 255 #use full dynamic range\n",
-    "    E = 110 #can be varied\n",
+    "    H = 255 # use full dynamic range\n",
+    "    E = 110 # can be varied\n",
     "    s = np.mean(img^2)\n",
     "    b = (h**2 *(E-L)-s*(H-L)+l**2 *(H-E)) / (2*(h*(E-L)-e*(H-L)+l*(H-E)))\n",
     "    a = (H-L)/((h-l)*(h+l-2*b))\n",
     "    c = L-a*(l-b)**2\n",
     "    y = a*(img-b)**2 +c\n",
-    "    return y.astype(int) #ensure all integers to plot image\n",
+    "    return y.astype(int) # ensure all integers to plot image\n",
     "\n",
-    "#apply function\n",
+    "# apply function\n",
     "image_BCET0 = BCET(image0)\n",
     "image_BCET1 = BCET(image1)\n",
     "image_BCET2 = BCET(image2)\n",
     "\n",
-    "#stack 3 bands back together\n",
+    "# stack 3 bands back together\n",
     "rgb = np.dstack((image_BCET0,image_BCET1,image_BCET2))"
    ]
   },
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "#visualise results\n",
+    "# visualise results\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(221), plt.title('original'), plt.set_cmap('gray')\n",
     "plt.imshow(img), plt.gcf().set_size_inches(16, 22)\n",
@@ -562,7 +562,7 @@
     "\n",
     "fig = plt.figure()\n",
     "\n",
-    "#plot histograms\n",
+    "# plot histograms\n",
     "fig.add_subplot(221), plt.title(\"bands histograms original image\")\n",
     "plt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n",
     "\n",
@@ -571,7 +571,7 @@
     "plt.plot(bin_edges2[0:-1], histogram2, 'g')\n",
     "plt.gcf().set_size_inches(16, 11)\n",
     "\n",
-    "#plot histograms\n",
+    "# plot histograms\n",
     "fig.add_subplot(222), plt.title(\"bands histograms after BCET\")\n",
     "plt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n",
     "\n",
@@ -605,10 +605,9 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "Theory, content structure and images have been obtained from module thought content: J Mason, P., n.d. ESE 3.25 Advanced Remote Sensing. pp.3 - 12.\n",
-    "\n",
-    "1. Create colourmap: <br />Stack Overflow. 2020. Define A Colormap For Each Set Of Values In An Array. [online] Available at: <https://stackoverflow.com/questions/42605051/define-a-colormap-for-each-set-of-values-in-an-array> [Accessed 22 June 2020].\n",
-    "2. BCET function: <br />GUO, L., 1991. Balance contrast enhancement technique and its application in image colour composition. International Journal of Remote Sensing, 12(10), pp.2133-2151."
+    "* Theory, content structure and images have been obtained from module thought content: J Mason, P., n.d. ESE 3.25 Advanced Remote Sensing. pp.3 - 12.\n",
+    "* Create colourmap: <br />Stack Overflow. 2020. Define A Colormap For Each Set Of Values In An Array. [online] Available at: <https://stackoverflow.com/questions/42605051/define-a-colormap-for-each-set-of-values-in-an-array> [Accessed 22 June 2020].\n",
+    "* BCET function: <br />GUO, L., 1991. Balance contrast enhancement technique and its application in image colour composition. International Journal of Remote Sensing, 12(10), pp.2133-2151."
    ]
   }
  ],
@@ -629,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
