--- a/notebooks/geosciences/remote_sensing/Image_Transformations_and_Orthorectification.ipynb
+++ b/notebooks/geosciences/remote_sensing/Image_Transformations_and_Orthorectification.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Image Transformations and orthorectification\n",
+    "# Image transformations and orthorectification\n",
     "\n",
     "A transformation in itself is a function that maps one set to another set. Geometric image transformations are widely used for registration and removal of geometric distortion. Common applications include the construction of mosaics, geographical mapping, robotic vision, satellite imagery, stereo imaging and video.\n",
     "\n",
@@ -40,21 +40,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hit \"o\" to close window!\n",
-    "#read in image\n",
+    "# hit \"o\" to close window!\n",
+    "# read in image\n",
     "img = cv2.imread('Data_Image_Transformations/Chessboard.jpg')\n",
     "\n",
-    "#resize image\n",
+    "# resize image\n",
     "height, width = img.shape[:2]\n",
     "res = cv2.resize(img,(2*width, 2*height), interpolation = cv2.INTER_CUBIC)\n",
-    "#Preferable interpolation methods are cv2.INTER_AREA for shrinking and cv2.INTER_CUBIC (slow) & \n",
-    "#cv2.INTER_LINEAR for zooming. By default, interpolation method used is cv2.INTER_LINEAR for all\n",
-    "#resizing purposes\n",
+    "# Preferable interpolation methods are cv2.INTER_AREA for shrinking and cv2.INTER_CUBIC (slow) & \n",
+    "# cv2.INTER_LINEAR for zooming. By default, interpolation method used is cv2.INTER_LINEAR for all\n",
+    "# resizing purposes\n",
     "\n",
-    "#show change in full size\n",
+    "# show change in full size\n",
     "cv2.imshow('img',img)\n",
     "cv2.imshow('res',res)\n",
-    "cv2.waitKey(0) #hit 0 to close window\n",
+    "cv2.waitKey(0) # hit 0 to close window\n",
     "cv2.destroyAllWindows()"
    ]
   },
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "#show change in line\n",
+    "# show change in line\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(121),plt.imshow(img),plt.title('Input')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
@@ -94,12 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Translation\n",
+    "## Translation\n",
     "Translation is the shifting of an objects location. If you know the shift in (x,y) direction, let it be $(T_x, T_y)$, you can create the transformation matrix M as follows:\n",
-    "\\\\( M = \\begin{bmatrix}\n",
+    "\\\\[ M = \\begin{bmatrix}\n",
     "1 & 0 & t_x\\\\\n",
     "0 & 1 & t_y\n",
-    "\\end{bmatrix}\\\\)\n",
+    "\\end{bmatrix}\\\\]\n",
     "\n",
     "Note where the image axis point, commonly the origin lies at the top left.\n"
    ]
@@ -113,14 +113,14 @@
     "# read in image\n",
     "img = cv2.imread('Data_Image_Transformations/Chessboard.jpg',0)\n",
     "\n",
-    "#prepare variables\n",
+    "# prepare variables\n",
     "img = np.array(img)\n",
     "rows,cols = img.shape\n",
     "\n",
-    "#translation function \n",
+    "# translation function \n",
     "M = np.float32([[1,0,300],[0,1,100]])\n",
     "\n",
-    "#translation\n",
+    "# translation\n",
     "dst = cv2.warpAffine(img,M,(cols,rows))"
    ]
   },
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "#show results\n",
+    "# show results\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(121),plt.imshow(img),plt.title('Input')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
@@ -160,13 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rotation\n",
+    "## Rotation\n",
     "\n",
     "Rotation of an image for an angle $\\theta$ is achieved by the transformation matrix of the form:\n",
-    "\\\\( M = \\begin{bmatrix}\n",
+    "\\\\[ M = \\begin{bmatrix}\n",
     " cos \\theta & -sin\\theta\\\\\n",
     " sin\\theta & cos\\theta\n",
-    "\\end{bmatrix}\\\\)\n",
+    "\\end{bmatrix}\\\\]\n",
     "OpenCv appends upon this to allow the rotation with adjustable centre of rotation. "
    ]
   },
@@ -182,10 +182,10 @@
     "# set parameters\n",
     "rows,cols = img.shape\n",
     "\n",
-    "#set rotation function\n",
+    "# set rotation function\n",
     "M = cv2.getRotationMatrix2D((cols/2,rows/2),90,1) # 90 degrees, no scaling\n",
     "\n",
-    "#rotation\n",
+    "# rotation\n",
     "dst = cv2.warpAffine(img,M,(cols,rows))"
    ]
   },
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "#show results\n",
+    "# show results\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(121),plt.imshow(img),plt.title('Input')\n",
     "plt.ylabel(\"pixels\"), plt.xlabel(\"pixels\")\n",
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Affine Transformation\n",
+    "## Affine transformation\n",
     "\n",
     "Affine transformation is a linear mapping method that preserves points, straight lines, and planes. all parallel lines in the original image will still be parallel in the output image. To find the transformation matrix, we need three points from the input image and their corresponding location in the output image.\n",
     "\n",
@@ -249,15 +249,15 @@
     }
    ],
    "source": [
-    "#script to find coordinates in input image, used for Affine and Perspective transformation\n",
+    "# script to find coordinates in input image, used for Affine and Perspective transformation\n",
     "\n",
-    "#double left click to set point and click 'a' to print coordinates\n",
+    "# double left click to set point and click 'a' to print coordinates\n",
     "# click esc to close window\n",
     "\n",
-    "#read in image\n",
+    "# read in image\n",
     "img = cv2.imread('Data_Image_Transformations/Chessboard.jpg',0)\n",
     "\n",
-    "#draw selected points on image\n",
+    "# draw selected points on image\n",
     "n = 1\n",
     "def draw_circle(event,x,y,flags,param):\n",
     "    global mouseX,mouseY,n\n",
@@ -267,11 +267,11 @@
     "        mouseX,mouseY = x,y\n",
     "        n = n + 1 \n",
     "\n",
-    "#allow for mouse input\n",
+    "# allow for mouse input\n",
     "cv2.namedWindow('image')\n",
     "cv2.setMouseCallback('image',draw_circle)\n",
     "\n",
-    "#return mouse click x and y coordinates\n",
+    "# return mouse click x and y coordinates\n",
     "while(1):\n",
     "    cv2.imshow('image',img)\n",
     "    k = cv2.waitKey(20) & 0xFF\n",
@@ -290,11 +290,11 @@
     "# read in image\n",
     "img = cv2.imread('Data_Image_Transformations/Chessboard.jpg',0)\n",
     "\n",
-    "#set parameters\n",
+    "# set parameters\n",
     "rows,cols = img.shape\n",
-    "#original image coordinates\n",
+    "# original image coordinates\n",
     "pts1 = np.float32([[131,334],[722,58],[1313,301]])\n",
-    "#where points should be placed \n",
+    "# where points should be placed \n",
     "pts2 = np.float32([[100,250],[800,150],[1000,500]])\n",
     "\n",
     "# create matrix for transformation\n",
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "#show results\n",
+    "# show results\n",
     "fig = plt.figure()\n",
     "fig.add_subplot(121),plt.imshow(img),plt.title('Input')\n",
     "fig.add_subplot(122),plt.imshow(dst),plt.title('Output')\n",
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Perspective Transformation\n",
+    "## Perspective transformation\n",
     "\n",
     "Perspective transformation or orthorectification removes effects from tilt in the image to create a planimetrically correct image. In other words, it generates an image as if it was captured from the vertical (on-Nadir). \n",
     "\n",
@@ -358,15 +358,15 @@
     "# read in image\n",
     "img = cv2.imread('Data_Image_Transformations/Chessboard.jpg',0)\n",
     "\n",
-    "#set parameters\n",
+    "# set parameters\n",
     "rows,cols = img.shape\n",
     "pts1 = np.float32([[131,334],[722,58],[1313,301],[716,725]])\n",
     "pts2 = np.float32([[0,0],[300,0],[300,300],[0,300]])\n",
     "\n",
-    "#set function/matrix\n",
+    "# set function/matrix\n",
     "M = cv2.getPerspectiveTransform(pts1,pts2)\n",
     "\n",
-    "#transformation\n",
+    "# transformation\n",
     "dst = cv2.warpPerspective(img,M,(300,300))"
    ]
   },
@@ -393,7 +393,7 @@
     }
    ],
    "source": [
-    "#show results\n",
+    "# show results\n",
     "plt.subplot(121),plt.imshow(img),plt.title('Input')\n",
     "plt.subplot(122),plt.imshow(dst),plt.title('Output')\n",
     "plt.show()"
@@ -414,13 +414,6 @@
     "- Camera Calibration toolbox OpenCV scripts:<br />GitHub. 2020. Davidwangwood/Camera-Calibration-Python. [online] Available at: <https://github.com/DavidWangWood/Camera-Calibration-Python> [Accessed 13 July 2020].\n",
     "- Orthorectification:<br />Trac.osgeo.org. 2020. Orthorectification – OSSIM. [online] Available at: <https://trac.osgeo.org/ossim/wiki/orthorectification> [Accessed 13 July 2020]. <br /> Hagolle, O., 2020. The Orthorectification : How It Works – Séries Temporelles. [online] Labo.obs-mip.fr. Available at: <https://labo.obs-mip.fr/multitemp/the-orthorectification-how-it-works/> [Accessed 13 July 2020]."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -440,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
