--- a/_sources/geosciences/1D_Resistivity_Forward_Modelling.ipynb
+++ b/_sources/geosciences/1D_Resistivity_Forward_Modelling.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# 1D Resistivity Forward Modelling\n",
+    "# 1D resistivity forward modelling\n",
     "\n",
     "This notebook allows for the forward modelling of 1D resistivity data based of a chosen input model. Modify the model parameters to reduce the error between our modelled resistivity and our field data. Different models can explain the same data, however the simpler model is commonly preferred. Unless there is alternative data to justify the more complex model."
    ]
